--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/app.css">
     <title>QQ音乐播放器</title>
 </head>
 <body>
-    
+    <header id="header">
+        <!-- <h1>QQ音乐</h1> -->
+        <img src="img/logo.png" alt="" id="logo">
+    </header>
 </body>
 </html>
