--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,43 @@
 <body>
     <header id="header">
         <!-- <h1>QQ音乐</h1> -->
-        <img src="img/logo.png" alt="" id="logo">
+        <img src="images/logo.png" alt="" id="logo">
     </header>
+    <nav>
+
+    </nav>
+    <div class="qq_wraper" id="slider">
+        <div class="qq-slider">
+            <div class="qq-slider-wrap">
+                <div class="qq-slider-item">
+                    <a href="">
+                        <img src="images/231321.jpg" alt="">
+                    </a>
+                </div>
+                <div class="qq-slider-item">
+                    <a href="">
+                        <img src="images/300107.jpg" alt="">
+                    </a>
+                </div>
+                <div class="qq-slider-item">
+                    <a href="">
+                        <img src="images/301645.jpg" alt="">
+                    </a>
+                </div>
+                <div class="qq-slider-item">
+                    <a href="">
+                        <img src="images/302031.jpg" alt="">
+                    </a>
+                </div>
+                <div class="qq-slider-item">
+                    <a href="">
+                        <img src="images/302255.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/slider.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
