--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="vendors/swiper.min.css">
     <link rel="stylesheet" href="css/app.css">
     <title>QQ音乐播放器</title>
 </head>
+
 <body>
     <header id="header">
         <!-- <h1>QQ音乐</h1> -->
         <img src="images/logo.png" alt="" id="logo">
     </header>
-    <nav>
-
+    <nav class="navbar">
+        <ul class="nav-list">
+            <li class="nav-item active">推荐</li>
+            <li class="nav-item">排行榜</li>
+            <li class="nav-item">搜索</li>
+        </ul>
     </nav>
-    <div class="qq_wraper" id="slider">
-        <div class="qq-slider">
-            <div class="qq-slider-wrap">
-                <div class="qq-slider-item">
+    <div class="nav-Leaderboard">
+        排行榜
+    </div>
+    <div class="nav-search">
+        搜索
+    </div>
+    <main class="nav-recommend">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
                     <a href="">
                         <img src="images/231321.jpg" alt="">
                     </a>
                 </div>
-                <div class="qq-slider-item">
+                <div class="swiper-slide">
                     <a href="">
                         <img src="images/300107.jpg" alt="">
                     </a>
                 </div>
-                <div class="qq-slider-item">
+                <div class="swiper-slide">
                     <a href="">
                         <img src="images/301645.jpg" alt="">
                     </a>
                 </div>
-                <div class="qq-slider-item">
+                <div class="swiper-slide">
                     <a href="">
                         <img src="images/302031.jpg" alt="">
                     </a>
                 </div>
-                <div class="qq-slider-item">
+                <div class="swiper-slide">
                     <a href="">
                         <img src="images/302255.jpg" alt="">
                     </a>
                 </div>
             </div>
+            <div class="swiper-pagination"></div>
         </div>
-    </div>
-    <script src="js/slider.js"></script>
+    </main>
+
+    <script src="vendors/jquery.min.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="vendors/swiper.min.js"></script>
+    <script src="js/swiper.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
