电台歌单页面

--- a/src/index.html
+++ b/src/index.html
@@ -22,44 +22,179 @@
             <li class="nav-item">搜索</li>
         </ul>
     </nav>
-    <div class="nav-Leaderboard">
-        排行榜
-    </div>
-    <div class="nav-search">
-        搜索
-    </div>
-    <main class="nav-recommend">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="">
-                        <img src="images/231321.jpg" alt="">
-                    </a>
+    <div class="content_wrapper">
+        <div class="recom_wrap active">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="">
+                            <img src="images/231321.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="">
+                            <img src="images/300107.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="">
+                            <img src="images/301645.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="">
+                            <img src="images/302031.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="">
+                            <img src="images/302255.jpg" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <a href="">
-                        <img src="images/300107.jpg" alt="">
-                    </a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="">
-                        <img src="images/301645.jpg" alt="">
-                    </a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="">
-                        <img src="images/302031.jpg" alt="">
-                    </a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="">
-                        <img src="images/302255.jpg" alt="">
-                    </a>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="mod_list">
+                <h2 class="mod_title">电台</h2>
+                <ul>
+                    <li class="list_content">
+                        <a href="">
+                            <div class="list_media">
+                                <img src="images/track_radio_199_13_1.jpg" alt="">
+                                <span class="list_icon"></span>
+                            </div>
+                            <div class="list_text">
+                                <h3>热歌</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="list_content">
+                        <a href="">
+                            <div class="list_media">
+                                <img src="images/track_radio_307_13_1.jpg" alt="">
+                                <span class="list_icon"></span>
+                            </div>
+                            <div class="list_text">
+                                <h3>一人一首招牌歌</h3>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mod_special">
+                <h2 class="mod_title">热门歌单</h2>
+                <ul>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/300.jpeg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>940.0万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>催泪大杀器！盘点演唱会经典万人大合唱</h3>
+                                <p>Harry</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/301.jpeg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>66.1万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>纳尼？这些华语歌手竟然会唱日语歌！</h3>
+                                <p>风吹草地</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/302.jpeg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>108.1万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>精选内地十大民谣歌手代表作</h3>
+                                <p>s1</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/303.jpeg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>115.8万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>$doopeBoi关注我网易yun歌手页</h3>
+                                <p>CREAMSAUCEONMEBABY</p>
+                            </div>
+                            
+                        </a>
+                    </li>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/305.jpg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>95.3万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>trip-hop单曲大推荐</h3>
+                                <p>哑忍</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="mod_content">
+                        <a href="">
+                            <div class="mod_media">
+                                <img src="images/304.jpeg" alt="">
+                                <span class="mod_icon"></span>
+                                <span class="moun_count">
+                                    <i></i> 
+                                    <span>35.7万</span>
+                                </span>
+                            </div>
+                            <div class="mod_text">
+                                <h3>浮光掠影：ACG纯音乐赏析合辑</h3>
+                                <p>肥喵</p>
+                            </div>
+                        </a>
+                    </li>
+                    
+
+                    <li></li>
+                </ul>
+            </div>
         </div>
-    </main>
+
+        <div class="toplist_wrap">
+            排行榜
+        </div>
+        <div class="seach_wrap">
+            搜索
+        </div>
+    </div>
 
     <script src="vendors/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
